# mh_utils

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  autodoc_augment_defaults.py  autodoc_typehints_attrs.py  autodoc_typehints_attrs_demo.py  conf.py  contributing.rst  index.rst  latex_unicode.py  license.rst  read_worklist.py  requirements.txt  worklist.csv
doc-source/_static/: style.css
doc-source/_templates/: layout.html
doc-source/api/: mh_utils.rst  utils.rst  xml.rst
doc-source/api/cef_parser/: index.rst
doc-source/api/csv_parser/: classes.rst  index.rst  utils.rst
doc-source/api/worklist_parser/: classes.rst  columns.rst  enums.rst  index.rst  parser.rst  worklist.json  worklist_df_head.txt
mh_utils/: __init__.py  pcdl.py  utils.py  xml.py
mh_utils/cef_parser/: __init__.py
mh_utils/csv_parser/: __init__.py  classes.py  utils.py
mh_utils/worklist_parser/: __init__.py  classes.py  columns.py  enums.py  parser.py
tests/: common.py  conftest.py  requirements.txt  test_pcdl.py  test_utils.py
tests/cassettes/: test_pcdl.json
tests/test_cef_parser/: example.cef  test_compound.py  test_device.py  test_molecule.py  test_parse_compound_scores.py  test_peak.py  test_rtrange.py  test_spectrum.py
tests/test_cef_parser/test_compound_/: test_repr_repr.txt  test_repr_str.txt
tests/test_csv_parser/: test_csv_parser.py
tests/test_csv_parser/raw_results/19-11-21/: CSV Results.csv
tests/test_csv_parser/raw_results/19-11-21/CEF Exports/: Methanol_Blank_+ve_191121-0001-r001.cef  Methanol_Blank_+ve_5ul_191121-0007-r001.cef  Methanol_Blank_-ve_191121-0004-r001.cef  Propellant_1mg_+ve_191121-0002-r001.cef  Propellant_1mg_+ve_5ul_191121-0008-r001.cef  Propellant_1mg_-ve_191121-0005-r001.cef  Propellant_1mg_drying_14_191121-0015-r001.cef  Propellant_1mg_drying_16_191121-0017-r001.cef  Propellant_1mg_drying_18_191121-0019-r001.cef  Propellant_1mg_gas_200_191121-0011-r001.cef  Propellant_1mg_gas_280_191121-0013-r001.cef  Propellant_1mg_nebul_40_191121-0021-r001.cef  Propellant_1mg_nebul_50_191121-0023-r001.cef  Propellant_1ug_+ve_191121-0003-r001.cef  Propellant_1ug_+ve_5ul_191121-0009-r001.cef  Propellant_1ug_-ve_191121-0006-r001.cef  Propellant_1ug_drying_14_191121-0016-r001.cef  Propellant_1ug_drying_16_191121-0018-r001.cef  Propellant_1ug_drying_18_191121-0020-r001.cef  Propellant_1ug_gas_200_191121-0012-r001.cef  Propellant_1ug_gas_280_191121-0014-r001.cef  Propellant_1ug_nebul_40_191121-0022-r001.cef  Propellant_1ug_nebul_50_191121-0024-r001.cef
tests/test_csv_parser/raw_results/19-11-26/: CSV Results.csv
tests/test_csv_parser/raw_results/19-11-26/CEF Exports/: Methanol_191126-0001-r001.cef  Propellant_1mg_191126-0002-r001.cef  Propellant_1ug_191126-0003-r001.cef
tests/test_csv_parser/raw_results/19-11-28/: CSV Results.csv
tests/test_csv_parser/raw_results/19-11-28/CEF Exports/: Methanol_191128-0001-r001.cef  Methanol_191128-0003-r001.cef  Methanol_191128-0004-r001.cef  Propellant_100mg_191128-0005-r001.cef  Propellant_10mg_191128-0002-r001.cef  Propellant_10mg_191128-0004-r001.cef  Propellant_1mg_191128-0006-r001.cef  Propellant_1ug_191128-0005-r001.cef
tests/test_csv_parser/raw_results/19-12-06/: CSV Results.csv
tests/test_csv_parser/raw_results/19-12-06/CEF Exports/: Methanol Blank (2)_191206-0001.cef  Methanol Blank (2)_191206-0005.cef  Propellant 10mg (1)_191206-00011.cef  Propellant 10mg (2)_191206-00010.cef  Propellant 10mg (2)_191206-0004.cef  Propellant 1mg (2)_191206-0003.cef  Propellant 1mg (2)_191206-0006.cef  Propellant 1mg (2)_191206-0007.cef  Propellant 1mg (2)_191206-0008.cef  Propellant 1mg (2)_191206-0009.cef  Propellant 1ug (2)_191206-0002.cef
tests/test_csv_parser/raw_results/19-12-11/: CSV Results.csv
tests/test_csv_parser/raw_results/19-12-11/CEF Exports/: Methanol_Blank_191211-0001.cef  Propellant 10mg (2)_191211-0004.cef  Propellant 1mg (2)_191211-0003.cef  Propellant 1mg (2)_repeat_191211-0005.cef  Propellant 1ug (2)_191211-0002.cef  Propellant 1ug (2)_repeat_191211-0004.cef
tests/test_csv_parser/raw_results/20-01-24/: CSV Results.csv
tests/test_csv_parser/raw_results/20-01-24/CEF Exports/: MeOH_Blank_200124-0001.cef  Propellant_Std_100ug_1_200124-0006.cef  Propellant_Std_100ug_2_200124-0007.cef  Propellant_Std_10ug_1_200124-0004.cef  Propellant_Std_10ug_2_200124-0005.cef  (+4 more)
tests/test_csv_parser/raw_results/20-01-28/: CSV Results.csv
tests/test_csv_parser/raw_results/20-01-29/: CSV Results.csv
tests/test_csv_parser/raw_results/20-02-06/: CSV Results.csv
tests/test_csv_parser/raw_results/20-02-18/: CSV Results.csv
tests/test_csv_parser/raw_results/20-02-21/: CSV Results.csv
tests/test_csv_parser/raw_results/20-02-27/: CSV Results.csv
tests/test_csv_parser/raw_results/20-03-03/: CSV Results.csv
tests/test_csv_parser/test_csv_parser_/: test_csv_parser.csv  test_csv_parser.json
tests/test_pcdl_/: test_make_pcdl_csv.csv  test_make_pcdl_csv___3_8_.csv  test_make_pcdl_csv___3_8__csv.csv  test_make_pcdl_csv___3_9_.csv  test_make_pcdl_csv___3_9__csv.csv  test_make_pcdl_csv_csv.csv
tests/test_worklist_parser/: test_attribute.py  test_checksum.py  test_columns.py  test_integration.py  test_job_data.py  test_macro.py  test_parser.py  test_worklist.py  test_worklist.wkl  test_xml_file_mixin.py
tests/test_xml/: __init__.py  bad_file.xml  shiporder.xml  test_get_validated_tree.py  test_xml_zipapp.pyz
tests/test_xml/test_xml_zipapp_source/test_xml_zipapp/: schema.xml
(+54 files in other folders)
