[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "mh_utils"
version = "0.2.2"
description = "Utilities for handing ancillary files produced by MassHunter."
readme = "README.rst"
keywords = [ "chemistry", "mass-spectrometry", "chromatography",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/PyMassSpec/mh_utils"
"Issue Tracker" = "https://github.com/PyMassSpec/mh_utils/issues"
"Source Code" = "https://github.com/PyMassSpec/mh_utils"
Documentation = "https://mh_utils.readthedocs.io/en/latest"

[tool.whey]
base-classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "LGPL-3.0-or-later"
